Tests passing. (#202)
* Tests passing.

* More fixes.

* Testing.

* Testing.

* Testing.

* Testing.